--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -49,22 +49,23 @@ To install Creation UI, run command below:
 
 - [x] [Autocomplete](/docs/components/autocomplete)
 - [x] [Avatar](/docs/components/avatar)
-- [x] [Button](/docs/components/button)
-- [x] [Checkbox](/docs/components/checkbox)
-- [x] [Date picker](/docs/components/date-picker) is just TW styled [react-datepicker](https://reactdatepicker.com/)
-- [x] [Drawer](/docs/components/drawer)
-- [x] [Input](/docs/components/input)
 - [x] [Box](/docs/components/box)
 - [x] [Button Group](/docs/components/button-group)
-- [x] [Dark Mode Toggle](/docs/components/dark-mode-toggle) inspired by [This guy](https://chakra-ui.com/)
+- [x] [Button](/docs/components/button)
+- [x] [Checkbox](/docs/components/checkbox)
+- [x] [Dark Mode Toggle](/docs/components/dark-mode-toggle)
+- [x] [Date picker](/docs/components/date-picker)
+- [x] [Drawer](/docs/components/drawer)
+- [x] [Input](/docs/components/input)
 - [x] [Loader](/docs/components/loader)
 - [x] [Loading Overlay](/docs/components/loading-overlay)
 - [x] [Modal](/docs/components/modal)
-- [x] [Radio](/docs/components/radio)
 - [x] [Radio Group](/docs/components/radioGroup)
+- [x] [Radio](/docs/components/radio)
 - [x] [Select](/docs/components/select)
 - [x] [Status Badge](/docs/components/statusBadge)
 - [x] [Switch](/docs/components/switch)
+- [x] [Table](/docs/components/Table)
 - [x] [TextArea](/docs/components/textarea)
 - [x] [Theme](/docs/components/theme)
 - [x] [Toggle Group](/docs/components/toggle-group)
@@ -79,7 +80,6 @@ Reusable helpers
 
 In development
 
-- [ ] [Table](/docs/components/Table)
 - [ ] [Menu](/docs/components/Menu)
 - [ ] [Layout](/docs/components/Layout)
 - [ ] [Context Menu](/docs/components/context-menu)
