--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -60,12 +60,12 @@ To install Creation UI, run command below:
 - [x] [Loader](/docs/components/loader)
 - [x] [Loading Overlay](/docs/components/loading-overlay)
 - [x] [Modal](/docs/components/modal)
-- [x] [Radio Group](/docs/components/radioGroup)
+- [x] [Radio Group](/docs/components/radio-group)
 - [x] [Radio](/docs/components/radio)
 - [x] [Select](/docs/components/select)
-- [x] [Status Badge](/docs/components/statusBadge)
+- [x] [Status Badge](/docs/components/status-badge)
 - [x] [Switch](/docs/components/switch)
-- [x] [Table](/docs/components/Table)
+- [x] [Table](/docs/components/table)
 - [x] [TextArea](/docs/components/textarea)
 - [x] [Theme](/docs/components/theme)
 - [x] [Toggle Group](/docs/components/toggle-group)
@@ -73,17 +73,17 @@ To install Creation UI, run command below:
 
 Reusable helpers
 
-- [x] [Dropdown Chevron](/docs/components/autocomplete)
-- [x] [Clear Button](/docs/components/autocomplete)
-- [x] [Error Text](/docs/components/autocomplete)
-- [x] [Select Option](/docs/components/SelectOption)
+- [x] [Dropdown Chevron](/docs/components/dropdown-chevron)
+- [x] [Clear Button](/docs/components/clear-button)
+- [x] [Error Text](/docs/components/error-text)
+- [x] [Select Option](/docs/components/select-option)
 
 In development
 
-- [ ] [Menu](/docs/components/Menu)
-- [ ] [Layout](/docs/components/Layout)
+- [ ] [Menu](/docs/components/menu)
+- [ ] [Layout](/docs/components/layout)
 - [ ] [Context Menu](/docs/components/context-menu)
-- [ ] [Accordion](/docs/components/Accordion)
+- [ ] [Accordion](/docs/components/accordion)
 - [ ] [Schedule](/docs/components/schedule)
 - [ ] [Timeline](/docs/components/timeline)
 - [ ] [Breadcrumbs](/docs/components/breadcrumbs)
