feat: rename color zinc to info, fix switches

--- a/pages/docs/components/box.mdx
+++ b/pages/docs/components/box.mdx
@@ -10,10 +10,10 @@ import { Box, Button } from '@creation-ui/react'
 
 const Example = () => (
   <Box>
-    <h5 className='text-zinc-900 text-xl leading-tight font-medium mb-2'>
+    <h5 className='text-info-900 text-xl leading-tight font-medium mb-2'>
       New Post
     </h5>
-    <p className='text-zinc-700 text-base mb-4'>
+    <p className='text-info-700 text-base mb-4'>
       This is the preview of your content
     </p>
     <Button>Edit</Button>
