--- a/pages/docs/components/popover.mdx
+++ b/pages/docs/components/popover.mdx
@@ -23,11 +23,11 @@ export const PopoverExample = ({ ...props }: PopoverProps) => {
     <Popover
       open={open}
       node={
-        <Card className='m-1 shadow-2xl bg-white dark:bg-zinc-700 rounded-lg'>
-          <h5 className='text-zinc-900 text-xl leading-tight font-medium mb-2'>
+        <Card className='m-1 shadow-2xl bg-white dark:bg-info-700 rounded-lg'>
+          <h5 className='text-info-900 text-xl leading-tight font-medium mb-2'>
             New Post
           </h5>
-          <p className='text-zinc-700 text-base mb-4'>
+          <p className='text-info-700 text-base mb-4'>
             This is the preview of your content
           </p>
           <Button onClick={handleClose}>Close</Button>
