feat: style landing page

--- a/pages/docs/components/input.mdx
+++ b/pages/docs/components/input.mdx
@@ -35,6 +35,7 @@ export const InputExample = (props: Omit<InputProps, 'onChange' | 'ref'>) => {
     error: true,
     helperText: true,
     clearable: true,
+    inputType: true,
   }}
 >
   <InputPlayground label='Input' />
