--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,17 +1,3 @@
-import { Hero } from '@components/pages/index/hero'
-import { Docs } from '@components/pages/index/docs'
-import { Playground } from '@components/pages/index/playground'
-import { Pallette } from '@components/pages/index/pallette/pallette'
-import { Advantages } from '@components/pages/index/advantages/advantages'
-import { Button } from '@creation-ui/react'
-import clsx from 'clsx'
+import { Index } from '@components/pages/index'
 
-<div className='flex flex-col place-items-center h-screen'>
-  <div className='max-w-6xl'>
-    <Hero />
-    <Playground />
-    <Pallette />
-    <Advantages />
-    <Docs />
-  </div>
-</div>
+<Index />
