--- a/pages/docs/components/button-group.mdx
+++ b/pages/docs/components/button-group.mdx
@@ -1,6 +1,10 @@
 import { Button, ButtonGroup } from '@creation-ui/react'
-import { Container } from '@components/container'
-import { ButtonGroupExample, properties } from '@components/examples/button-group'
+import { Playground } from '@components/playground'
+import {
+  ButtonGroupPlayground,
+  playgroundConfig,
+  properties,
+} from '@components/examples/button-group'
 import PropsTable from '@components/props-table'
 import { Icon } from '@mdi/react'
 import {
@@ -12,73 +16,23 @@ import {
 
 # Button Group
 
+<Playground config={playgroundConfig}>
+  <ButtonGroupPlayground />
+</Playground>
+
 ```tsx copy
 import { Button, ButtonProps, ButtonGroup } from '@creation-ui/react'
 
-interface ButtonGroupExampleProps {
-  options?: string[]
-  variant?: ButtonProps['variant']
-}
+export const ButtonGroupPlayground = () => {
+  const options = [
+    { label: 'Year', onClick: () => {} },
+    { label: 'Month', onClick: () => {} },
+    { label: 'Day', onClick: () => {} },
+  ]
 
-export const ButtonGroupExample = ({
-  options,
-  variant,
-}: ButtonGroupExampleProps) => {
-  return (
-    <ButtonGroup>
-      {options?.map(option => (
-        <Button variant={variant}>{option}</Button>
-      ))}
-    </ButtonGroup>
-  )
+  return <ButtonGroup options={options} />
 }
 ```
-
-`div` wrapper for buttons.
-
-<Container>
-  <ButtonGroupExample options={[1, 2, 3]} />
-</Container>
-
-## Togglable options
-
-```tsx copy
-<ButtonGroupExample
-  options={[
-    <Icon size={1} key={1} path={mdiFormatAlignLeft} />,
-    <Icon size={1} key={2} path={mdiFormatAlignCenter} />,
-    <Icon size={1} key={3} path={mdiFormatAlignRight} />,
-  ]}
-  variant='outlined'
-/>
-```
-
-<Container>
-  <ButtonGroupExample
-    options={[
-      <Icon size={1} key={1} path={mdiFormatAlignLeft} />,
-      <Icon size={1} key={2} path={mdiFormatAlignCenter} />,
-      <Icon size={1} key={3} path={mdiFormatAlignRight} />,
-    ]}
-    variant='outlined'
-  />
-</Container>
-
-## More than 3 options
-
-<Container>
-  <ButtonGroupExample
-    options={[
-    <Icon size={1} key={1} path={mdiFormatAlignLeft}/>,
-    <Icon size={1} key={2} path={mdiFormatAlignCenter}/>,
-    <Icon size={1} key={3} path={mdiFormatAlignRight}/>,
-    <Icon size={1} key={4} path={mdiFormatAlignJustify}/>,
-    ]}
-    variant='outlined'
-
-/>
-
-</Container>
 
 ## Component API
 
