chore: update button-group docs

--- a/pages/docs/components/button-group.mdx
+++ b/pages/docs/components/button-group.mdx
@@ -4,6 +4,7 @@ import {
   ButtonGroupPlayground,
   playgroundConfig,
   properties,
+  buttonGroupOptions,
 } from '@components/examples/button-group'
 import PropsTable from '@components/props-table'
 import { Icon } from '@mdi/react'
@@ -40,4 +41,9 @@ export const ButtonGroupPlayground = () => {
   properties={properties}
   name='ButtonGroup'
   description={'ButtonGroup component props'}
+/>
+<PropsTable
+  properties={buttonGroupOptions}
+  name='ButtonGroupOption'
+  description={'ButtonGroupOption props'}
 />
