feat: add code block to playground

--- a/pages/docs/components/helper-text.mdx
+++ b/pages/docs/components/helper-text.mdx
@@ -21,6 +21,7 @@ import { Playground } from '@components/playground'
 
 <Playground
   config={{
+    name: 'HelperText',
     error: true,
     size: true,
     helperText: true,
