--- a/pages/docs/components/input.mdx
+++ b/pages/docs/components/input.mdx
@@ -28,6 +28,7 @@ export const InputExample = (props: Omit<InputProps, 'onChange' | 'ref'>) => {
 
 <Playground
   config={{
+    name:'Input',
     size: true,
     loading: true,
     disabled: true,
