--- a/pages/docs/components/status-badge.mdx
+++ b/pages/docs/components/status-badge.mdx
@@ -19,7 +19,13 @@ import { StatusBadge } from '@creation-ui/react'
 ## Playground
 
 <Playground
-  config={{ size: true, status: true, variant: true, content: true }}
+  config={{
+    name: 'StatusBadge',
+    size: true,
+    status: true,
+    variant: true,
+    content: true,
+  }}
 >
   <StatusBadgePlayground />
 </Playground>
