--- a/pages/docs/components/switch.mdx
+++ b/pages/docs/components/switch.mdx
@@ -10,6 +10,7 @@ import { Playground } from '@components/playground'
 
 <Playground
   config={{
+    name: 'Switch',
     disabled: true,
     size: true,
     readOnly: true,
