--- a/pages/docs/components/checkbox.mdx
+++ b/pages/docs/components/checkbox.mdx
@@ -1,46 +1,10 @@
 # Checkbox
 
-import { CheckboxExample } from '@components/examples/checkbox'
-import { Container } from '@components/container'
-import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
+import { CheckboxPlayground } from '@components/examples/checkbox'
 import PropsTable from '@components/props-table'
 import { properties } from '@components/examples/checkbox'
 
-```tsx copy
-import { Checkbox, CheckboxProps } from '@creation-ui/Checkbox'
-
-export const CheckboxComponet = ({
-  ...props
-}: Omit<CheckboxProps, 'onChange'>) => {
-  const [checked, setChecked] = useState<boolean>(false)
-
-  return <Checkbox onChange={setChecked} checked={checked} {...props} />
-}
-```
-
-<Container>
-  <CheckboxExample label="Yes, I like cookies"/>
-</Container>
-
-## Sizes
-
-This component supports `size` prop with values `sm`, `md`, `lg`:
-
-<UnfoldVariants
-  component={CheckboxExample}
-  variants={ELEMENT_SIZES}
-  prop='size'
-  nameProp='label'
-/>
-
-## States
-
-<Container>
-  <CheckboxExample disabled label={'disabled'} />
-  <CheckboxExample required label='Required' />
-  <CheckboxExample readOnly label='Read only' />
-</Container>
+<CheckboxPlayground label='Yes, I like cookies' />
 
 ## Component API
 
