--- a/pages/docs/components/loading-overlay.mdx
+++ b/pages/docs/components/loading-overlay.mdx
@@ -1,4 +1,7 @@
-import { LoadingOverlayExample, properties } from '@components/examples/loading-overlay'
+import {
+  LoadingOverlayExample,
+  properties,
+} from '@components/examples/loading-overlay'
 import PropsTable from '@components/props-table'
 import { UnfoldVariants } from '@components/unfold-variants'
 import { ELEMENT_SIZES } from '@creation-ui/react'
@@ -7,15 +10,10 @@ import { ELEMENT_SIZES } from '@creation-ui/react'
 
 Animated spinner for loading states.
 
-import InstallationGuide from '@components/shared/installation-guide.mdx'
-
-<InstallationGuide />
-
-
 ```tsx copy
 import { LoadingOverlay } from '@creation-ui/react'
 
-<LoadingOverlay />
+;<LoadingOverlay />
 ```
 
 ## Showing the overlay
@@ -23,7 +21,6 @@ import { LoadingOverlay } from '@creation-ui/react'
 <LoadingOverlayExample />
 
 ```tsx copy
-
 export const LoadingOverlayExample = (props: LoadingOverlayProps) => {
   const [loading, setLoading] = useState(true)
 
@@ -49,12 +46,11 @@ export const LoadingOverlayExample = (props: LoadingOverlayProps) => {
   )
 }
 ```
+
 ## Limitations
 
 To keep `LoadingOverlay` within the parent container you need to make it **relative** and **clip the overflow** to take into account the rounded edges.
 In TailwindCSS it would be `relative` and `overflow-clip`
-
-
 
 ## Component API
 
@@ -63,4 +59,3 @@ In TailwindCSS it would be `relative` and `overflow-clip`
   name='LoadingOverlay'
   description='LoadingOverlay component props'
 />
-
