--- a/pages/docs/components/select-option.mdx
+++ b/pages/docs/components/select-option.mdx
@@ -1,5 +1,3 @@
-import InstallationGuide from '@components/shared/installation-guide.mdx'
-import { SelectOption, SelectOptionsType } from '@creation-ui/react'
 import { properties, option } from '@components/examples/select-option'
 import PropsTable from '@components/props-table'
 
@@ -7,24 +5,12 @@ import PropsTable from '@components/props-table'
 
 Dropdown option component
 
-<InstallationGuide />
-
-## States and variants
-
-`SelectOption` can be used to list either a unique option selection or multiple at once. Depending on this the component will have a different UI presentation as indicated in the table below.
-
-Component will always take up all available width as it has class `w-full`.
-
-| State      | Single                                    | Multiple                                          |
-| ---------- | ----------------------------------------- | ------------------------------------------------- |
-| `default`  | <SelectOption option={option} />          | <SelectOption option={option} multiple />         |
-| `active`   | <SelectOption option={option} active/>    | <SelectOption option={option} active multiple/>   |
-| `selected` | <SelectOption option={option} selected /> | <SelectOption option={option} selected multiple/> |
-| `disabled` | <SelectOption option={option} disabled /> | <SelectOption option={option} disabled multiple/> |
-
 ## Component API
 
-import { selectOptionType, selectOptionComponent } from '@components/examples/select'
+import {
+  selectOptionType,
+  selectOptionComponent,
+} from '@components/examples/select'
 
 <PropsTable
   properties={selectOptionComponent}
