fix: circular dependency imports detected, card docs name

--- a/pages/docs/components/card.mdx
+++ b/pages/docs/components/card.mdx
@@ -1,4 +1,4 @@
-# Checkbox
+# Card
 
 import { CardExample, properties } from '@components/examples/card'
 import PropsTable from '@components/props-table'
