--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,9 +1,8 @@
 import '../styles/index.css'
 import '@creation-ui/react/index.css'
-import type { AppProps } from 'next/app'
 import { Analytics } from '@vercel/analytics/react'
 
-export default function App({ Component, pageProps }: AppProps) {
+export default function App({ Component, pageProps }) {
   return (
     <div className='debug-screens'>
       <Component {...pageProps} />
