chore: rename component toDatePicker

--- a/pages/docs/components/date-picker.mdx
+++ b/pages/docs/components/date-picker.mdx
@@ -1,15 +1,15 @@
-# Date Input
+# Date Picker
 
-import { properties, DateInputExample } from '@components/examples/date-input'
+import { properties, DatePickerExample } from '@components/examples/date-picker'
 import PropsTable from '@components/props-table'
 
-<DateInputExample />
+<DatePickerExample />
 
 ## Component API
 
 <PropsTable
   properties={properties}
-  name='Date Input'
+  name='Date Picker'
   description={
     <>
       Rest of the props are the same as for the native <code>input</code>{' '}
