refactor: autocomplete custom elements

--- a/pages/docs/components/autocomplete.mdx
+++ b/pages/docs/components/autocomplete.mdx
@@ -9,7 +9,8 @@ import {
   AutocompleteMultipleExample,
   AutocompleteMultiPlayground,
   AutocompleteOptionComponent,
-  AutocompleteOptionType
+  AutocompleteOptionType,
+  AutocompleteExampleCustomOptions
 } from '@components/examples/autocomplete'
 import PropsTable from '@components/props-table'
 import { Description } from '@components/typography'
@@ -31,6 +32,11 @@ props change the signature:{' '}
 | onChange | `T => void` | `T[] => void` |
 
 For details see [properties table](#onChange)
+
+
+## Custom Option and SelectedOption components
+
+<AutocompleteExampleCustomOptions/>
 
 ## Component API
 
