chore: update examples and docs of autocomplete

--- a/pages/docs/components/autocomplete.mdx
+++ b/pages/docs/components/autocomplete.mdx
@@ -1,7 +1,6 @@
 # Autocomplete
 
-Autocomplete component is using `Combobox` component from
-[headless ui](https://headlessui.com/react/combobox) library.
+The Autocomplete component dynamically suggests options as users type into an input field. This enhances user experience by making data entry faster and more accurate, particularly when dealing with large data sets. With multiple selection and customization capabilities, it offers high versatility for a wide range of applications.
 
 import {
   properties,
@@ -10,33 +9,35 @@ import {
   AutocompleteMultiPlayground,
   AutocompleteOptionComponent,
   AutocompleteOptionType,
-  AutocompleteExampleCustomOptions
+  AutocompleteExampleCustomOptions,
 } from '@components/examples/autocomplete'
 import PropsTable from '@components/props-table'
 import { Description } from '@components/typography'
+
+Let's dive in and see the Autocomplete component in action:
 
 <AutocompletePlayground />
 
 ## Autocompleteing multiple options
 
-In this example, we are using the `multiple` prop to allow multiple options.
+With the multiple prop, the Autocomplete component allows for the selection of multiple options, providing a dynamic and versatile user experience.
 
 <AutocompleteMultiPlayground />
 
-Because of the usage of the Listbox component under the hood, the `value` and `onChange`
-props change the signature:{' '}
+In the multiple mode, the value and onChange props adjust their signature as follows:
 
 | Property | `!multiple` | `multiple`    |
 | -------- | ----------- | ------------- |
 | value    | `T`         | `T[]`         |
 | onChange | `T => void` | `T[] => void` |
 
-For details see [properties table](#onChange)
-
+For more details, please refer to the [properties table.](#onChange)
 
 ## Custom Option and SelectedOption components
 
-<AutocompleteExampleCustomOptions/>
+Enhance your Autocomplete experience by using custom Option and SelectedOption components. This provides the flexibility to design and style options according to your application's needs and aesthetics.
+
+<AutocompleteExampleCustomOptions />
 
 ## Component API
 
@@ -51,8 +52,9 @@ For details see [properties table](#onChange)
   name='AutocompleteOption'
   description='The default Autocomplete option component.'
 />
+
 <PropsTable
   properties={AutocompleteOptionType}
   name='AutocompleteOptionsType'
-  description='Default shape of options. Might be ignored in favor of `any`'
+  description='Default shape of options. This may be ignored in favor of `any` depending on your requirements.'
 />
